--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -16,5 +16,42 @@
     "startContent": "<p class=\"govuk-body\">You can make a lasting power of attorney (LPA) using our online service.</p> <p class=\"govuk-body\">If you want to, you can ask someone else to use the service for you, for example a family member, friend or solicitor. You will still need to make all the decisions about what goes on the LPA.</p> <p class=\"govuk-body\">We’ll save the LPA as you progress so you do not need to complete it in one go. You can sign out at any time and come back later.</p> <p class=\"govuk-body\">It costs £82 to apply for an LPA.</p> <h2 class=\"govuk-heading-m\">Information you'll need</h2> <p class=\"govuk-body\">You may find it useful to gather some information before you start.</p> <p class=\"govuk-body\">As well as your details, you’ll need the names, addresses and dates of birth of:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>the attorneys</li> <li>the replacement attorneys, if you decide to have any</li> </ul> <p class=\"govuk-body\">You’ll also need the name and address of your certificate provider.</p> <h2 class=\"govuk-heading-m\">Documents, equipment and other things you'll need</h2> <p class=\"govuk-body\">You'll also need:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>a debit or credit card to pay the application fee</li> <li>a mobile phone, so we can text you a security code</li> <li>documents or information to prove your identity</li> </ul> <details class=\"govuk-details\" data-module=\"govuk-details\"> <summary class=\"govuk-details__summary\"> <span class=\"govuk-details__summary-text\"> What you need to prove your identity </span> </summary> <div class=\"govuk-details__text\"> <p class=\"govuk-body\">When you make an LPA, we need to check your identity. We do this to protect you and prevent fraud.</p> <p class=\"govuk-body\">You can prove your identity by:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>entering details from your passport or driving licence</li> <li>entering details from, and uploading a photo of, a recent payslip or P60</li> <li>signing in to your Government Gateway, Department for Work and Pensions, or online banking account, and letting us confirm your details with those organisations</li> <li>taking documents to a Post Office</li> <li>asking a professional (like a teacher, civil servant or solicitor) to confirm your identity</li> </ul> </div> </details>",
     "start": "Start",
     "openGovernmentLicenceContent": "All content is available under the <a class=\"govuk-footer__link\" href=\"https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/\" rel=\"license\">Open Government Licence v3.0</a>, except where otherwise stated",
-    "crownCopyright": "© Crown copyright"
+    "crownCopyright": "© Crown copyright",
+    "continue": "Continue",
+    "thereIsAProblem": "There is a problem",
+    
+    "yourDetails": "Your details",
+    "yourFirstName": "Your first name",
+    "yourLastName": "Your last name",
+    "yourDateOfBirth": "Your date of birth",
+    "dateOfBirthHint": "For example, 31 3 1980",
+    "day": "Day",
+    "month": "Month",
+    "year": "Year",
+    "enterYourFirstName": "Enter your first name",
+    "enterYourLastName": "Enter your last name",
+    "dateOfBirthDay": "Date of birth must include a day",
+    "dateOfBirthMonth": "Date of birth must include a month",
+    "dateOfBirthYear": "Date of birth must include a year",
+    "yourDateOfBirthMustBeReal": "Your date of birth must be a real date",
+    
+    "yourHomeAddress": "Your home address",
+    "postcode": "Postcode",
+    "findAddress": "Find address",
+    "selectAnAddress": "Select an address",
+    "cantFindYourAddress": "Can't find your address?",
+    "enterYourAddress": "Enter your address",
+    "addressesFound": {
+        "one": "{{.PluralCount}} address found",
+        "other": "{{.PluralCount}} addresses found"
+    },
+    "addressLine1": "Address line 1",
+    "addressLine2": "Address line 2 (optional)",
+    "townOrCity": "Town or city",
+    "enterPostcode": "Enter a postcode",
+    "selectYourAddress": "Select your address",
+    "enterYourAddress": "Enter your address",
+    "enterYourTownOrCity": "Enter your town or city",
+    "enterYourPostcode": "Enter your postcode",
+    "couldNotLookupPostcode": "Could not lookup postcode"
 }
