Add who is the lpa for page

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -54,5 +54,11 @@
     "enterYourAddress": "Welsh",
     "enterYourTownOrCity": "Welsh",
     "enterYourPostcode": "Welsh",
-    "couldNotLookupPostcode": "Welsh"
+    "couldNotLookupPostcode": "Welsh",
+
+    "whoIsThisLpaFor": "Welsh",
+    "forMe": "Welsh",
+    "forSomeoneElse": "Welsh",
+    "imHelping": "Welsh",
+    "selectWhoFor": "Welsh"
 }
