--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -19,7 +19,8 @@
     "crownCopyright": "© Crown copyright",
     "continue": "Continue",
     "thereIsAProblem": "There is a problem",
-    
+    "selectOneOrMoreOptions": "Select one or more options.",
+
     "yourDetails": "Your details",
     "yourFirstName": "Your first name",
     "yourLastName": "Your last name",
@@ -34,7 +35,7 @@
     "dateOfBirthMonth": "Date of birth must include a month",
     "dateOfBirthYear": "Date of birth must include a year",
     "yourDateOfBirthMustBeReal": "Your date of birth must be a real date",
-    
+
     "yourHomeAddress": "Your home address",
     "postcode": "Postcode",
     "findAddress": "Find address",
@@ -59,5 +60,15 @@
     "forMe": "For me",
     "forSomeoneElse": "For someone else",
     "imHelping": "I'm helping someone else fill in the LPA form",
-    "selectWhoFor": "Select who the LPA is for"
+    "selectWhoFor": "Select who the LPA is for",
+
+    "howWouldYouLikeToBeContacted": "How would you like to be contacted?",
+    "howWouldYouLikeToBeContactedDetail": "We'll contact you to keep you updated on the progress of the LPA application or we have any questions about it.",
+    "whatIfWantToChangeMyContactPreferences": "What if I want to change my contact preferences?",
+    "whatIfWantToChangeMyContactPreferencesDetail": "You can change your contact preferences at any time by signing into your account and selecting 'settings' in the top menu. Scroll down to 'contact preferences' and select your preferred contact methods.",
+    "email": "Email",
+    "phone": "Phone",
+    "textMessage": "Text message",
+    "post": "Post",
+    "selectContact": "Select at least one way to be contacted"
 }
