Update content on details page

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -22,26 +22,26 @@
     "selectOneOrMoreOptions": "Welsh",
 
     "yourDetails": "Welsh",
-    "yourFirstName": "Welsh",
-    "yourLastName": "Welsh",
-    "yourDateOfBirth": "Welsh",
+    "firstNames": "Welsh",
+    "lastName": "Welsh",
+    "otherNames": "Welsh",
+    "dateOfBirth": "Welsh",
     "dateOfBirthHint": "Welsh",
     "day": "Welsh",
     "month": "Welsh",
     "year": "Welsh",
-    "enterYourFirstName": "Welsh",
-    "enterYourLastName": "Welsh",
+    "enterFirstName": "Welsh",
+    "enterLastName": "Welsh",
     "dateOfBirthDay": "Welsh",
     "dateOfBirthMonth": "Welsh",
     "dateOfBirthYear": "Welsh",
-    "yourDateOfBirthMustBeReal": "Welsh",
+    "dateOfBirthMustBeReal": "Welsh",
 
-    "yourHomeAddress": "Welsh",
+    "homeAddress": "Welsh",
     "postcode": "Welsh",
     "findAddress": "Welsh",
     "selectAnAddress": "Welsh",
-    "cantFindYourAddress": "Welsh",
-    "enterYourAddress": "Welsh",
+    "cantFindAddress": "Welsh",
     "addressesFound": {
         "one": "{{.PluralCount}} Welsh",
         "two": "{{.PluralCount}} Welsh",
@@ -51,10 +51,10 @@
     "addressLine2": "Welsh",
     "townOrCity": "Welsh",
     "enterPostcode": "Welsh",
-    "selectYourAddress": "Welsh",
-    "enterYourAddress": "Welsh",
-    "enterYourTownOrCity": "Welsh",
-    "enterYourPostcode": "Welsh",
+    "selectAddress": "Welsh",
+    "enterAddress": "Welsh",
+    "enterTownOrCity": "Welsh",
+    "enterPostcode": "Welsh",
     "couldNotLookupPostcode": "Welsh",
 
     "whoIsThisLpaFor": "Welsh",
