--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -22,26 +22,26 @@
     "selectOneOrMoreOptions": "Select one or more options.",
 
     "yourDetails": "Your details",
-    "yourFirstName": "Your first name",
-    "yourLastName": "Your last name",
-    "yourDateOfBirth": "Your date of birth",
+    "firstNames": "First names",
+    "lastName": "Last name",
+    "otherNames": "Any other names you're known by (optional)",
+    "dateOfBirth": "Date of birth",
     "dateOfBirthHint": "For example, 31 3 1980",
     "day": "Day",
     "month": "Month",
     "year": "Year",
-    "enterYourFirstName": "Enter your first name",
-    "enterYourLastName": "Enter your last name",
+    "enterFirstNames": "Enter first names",
+    "enterLastName": "Enter last name",
     "dateOfBirthDay": "Date of birth must include a day",
     "dateOfBirthMonth": "Date of birth must include a month",
     "dateOfBirthYear": "Date of birth must include a year",
-    "yourDateOfBirthMustBeReal": "Your date of birth must be a real date",
+    "dateOfBirthMustBeReal": "Date of birth must be a real date",
 
-    "yourHomeAddress": "Your home address",
+    "homeAddress": "Home address",
     "postcode": "Postcode",
     "findAddress": "Find address",
     "selectAnAddress": "Select an address",
-    "cantFindYourAddress": "Can't find your address?",
-    "enterYourAddress": "Enter your address",
+    "cantFindAddress": "Can't find address?",
     "addressesFound": {
         "one": "{{.PluralCount}} address found",
         "other": "{{.PluralCount}} addresses found"
@@ -50,10 +50,10 @@
     "addressLine2": "Address line 2 (optional)",
     "townOrCity": "Town or city",
     "enterPostcode": "Enter a postcode",
-    "selectYourAddress": "Select your address",
-    "enterYourAddress": "Enter your address",
-    "enterYourTownOrCity": "Enter your town or city",
-    "enterYourPostcode": "Enter your postcode",
+    "selectAddress": "Select address",
+    "enterAddress": "Enter address",
+    "enterTownOrCity": "Enter town or city",
+    "enterPostcode": "Enter postcode",
     "couldNotLookupPostcode": "Could not lookup postcode",
 
     "whoIsThisLpaFor": "Who is this LPA for?",
