--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -104,6 +104,7 @@
     
     "whoWouldYouLikeToBeTheAttorneys": "Welsh",
     "whoWouldYouLikeToBeTheAttorneysContent": "<p class=\"govuk-body\">Welsh</p>",
+    "attorney": "Welsh",
     "enterEmail": "Welsh",
     "attorneyAddress": "{{.FirstNames}} {{.LastName}}'s Welsh",
 
