--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -111,5 +111,12 @@
     "wantReplacementAttorneysContent": "<p class=\"govuk-body-l\">Replacement attorneys step in if one of your original attorneys dies or has to step down from the role.</p> <p class=\"govuk-body\">Having replacement attorneys is optional, however, having 1 or more helps make sure your LPA will keep working if Pat Taylor (your original attorney) has to step down.</p> <p class=\"govuk-body\">A replacement attorney must meet the same requirements as an original attorney. This includes being 18 or over.</p> <p class=\"govuk-body\"><a href=\"#\">Find out more about replacement attorneys.</a></p>",
     "yes": "Yes",
     "no": "No",
-    "selectWantReplacementAttorneys": "Select whether you want any replacement attorneys"
+    "selectWantReplacementAttorneys": "Select whether you want any replacement attorneys",
+
+    "whenCanTheLpaBeUsed": "When can the LPA can be used?",
+    "whenCanTheLpaBeUsedContent": "<p class=\"govuk-body-l\">You can decide whether you want your attorney to be able to use the LPA as soon as it's registered or only once you've lost mental capacity.</p> <h2 class=\"govuk-heading-m\">As soon as the LPA is registered</h2> <p class=\"govuk-body\">Most people choose this option as it’s the most practical. It means Pat Taylor (your attorney) can use the LPA:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>if you lose mental capacity</li> <li>when you have mental capacity, but only if you give them permission to do something</li> </ul> <p class=\"govuk-body\">This option is useful in case there are times in the future when you're able to make your own decisions, but need help with certain things. For example, if it ever became difficult for you to visit the bank or talk on the phone, you might ask Pat to use the LPA to deal with the bank or pay bills.</p> <h2 class=\"govuk-heading-m\">Only when you've lost mental capacity</h2> <p class=\"govuk-body\">This option means Pat can only use the LPA if you have lost mental capacity.</p> <p class=\"govuk-body\">Be careful, as this can make the LPA a lot less useful. Each time Pat tries to use the LPA, they might be asked to prove that you do not have mental capacity.</p>",
+    "whenDoYouWantAttorneysToUse": "When do you want the attorneys to be able to use the LPA?",
+    "asSoonAsItsRegistered": "As soon as it's registered",
+    "onlyWhenIDoNotHaveMentalCapacity": "Only when I do not have mental capacity",
+    "selectWhenCanTheLpaBeUsed": "Select when the LPA can be used"
 }
