--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -85,6 +85,7 @@
     "taskListHelp": "Help with making this LPA",
     "taskListHelpContent": "<p>There's help included with every question, and you can also read our <a href=\"#\">full guide to making an LPA</a>.</p> <p>You may want to look at our <a href=\"#\">before you begin help page</a>. It explains the decisions you have to make about your LPA and the information you’ll need to provide.</p> <p>We’ll save the LPA as you progress - you don't need to complete it in one go. You can sign out at any time and come back later.</p>",
     "completed": "Completed",
+    "inProgress": "In progress",
     "cannotStartYet": "Cannot start yet",
     "notStarted": "Not started",
     "fillInTheLpa": "Fill in the LPA",
@@ -118,5 +119,12 @@
     "whenDoYouWantAttorneysToUse": "When do you want the attorneys to be able to use the LPA?",
     "asSoonAsItsRegistered": "As soon as it's registered",
     "onlyWhenIDoNotHaveMentalCapacity": "Only when I do not have mental capacity",
-    "selectWhenCanTheLpaBeUsed": "Select when the LPA can be used"
+    "selectWhenCanTheLpaBeUsed": "Select when the LPA can be used",
+
+    "restrictionsOnYourAttorneysPower": "Restrictions on your attorneys' power",
+    "restrictionsOnYourAttorneysPowerContent": "<p class=\"govuk-body\">You can add 'restrictions' to the LPA - this is optional.</p> <p class=\"govuk-body\">Restrictions guide the way the attorneys make decisions. They tell the attorneys what:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>they must or must not do, when they’re making certain decisions on your behalf</li> <li>you would like them to consider when they’re making certain decisions</li> </ul>",
+    "restrictionExamples": "Show me some examples",
+    "restrictionExamplesContent": "<h2 class=\"govuk-heading-s\">Example restrictions: things the attorneys must or must not do</h2> <ul class=\"govuk-list govuk-list--bullet\"> <li>'My attorneys must only invest my money in ethical funds'</li> <li>'My attorneys must not sell my home unless, in my doctor's opinion, I can no longer live independently.'</li> </ul> <h2 class=\"govuk-heading-s\">Example restrictions: things the attorneys should consider</h2> <ul class=\"govuk-list govuk-list--bullet\"> <li>'I'd like my attorneys to consider ethical funds when investing my money'</li> <li>I would like my attorneys to consult my doctor if they believe I may not have mental capacity to make decisions about my house.</li> </ul>",
+    "restrictions": "Restrictions",
+    "restrictionsTooLong": "Restrictions must be 10,000 or fewer characters"
 }
