Add certificate provider details page

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -131,5 +131,9 @@
     "restrictions": "Welsh",
     "restrictionsTooLong": "Welsh",
 
-    "whoDoYouWantToBeCertificateProviderGuidance": "<p class=\"govuk-body\">Welsh</p>"
+    "whoDoYouWantToBeCertificateProviderGuidance": "<p class=\"govuk-body\">Welsh</p>",
+
+    "certificateProviderDetails": "Welsh",
+    "certificateProviderDetailsHint": "Welsh",
+    "certificateProviderDobHint": "Welsh"
 }
