--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -83,7 +83,7 @@
     "lpaTypeHwHint": "Welsh",
     "lpaTypeBoth": "Welsh",
     "selectLpaType": "Welsh",
-    
+
     "taskListHeading": "Welsh",
     "taskListHelp": "Welsh",
     "taskListHelpContent": "<p class=\"govuk-body\">Welsh</p>",
@@ -104,7 +104,7 @@
     "confirmYourIdentity": "Welsh",
     "signAndRegisterTheLpa": "Welsh",
     "signTheLpa": "Welsh",
-    
+
     "whoWouldYouLikeToBeTheAttorneys": "Welsh",
     "whoWouldYouLikeToBeTheAttorneysContent": "<p class=\"govuk-body\">Welsh</p>",
     "attorney": "Welsh",
@@ -116,14 +116,14 @@
     "yes": "Welsh",
     "no": "Welsh",
     "selectWantReplacementAttorneys": "Welsh",
-    
+
     "whenCanTheLpaBeUsed": "Welsh",
     "whenCanTheLpaBeUsedContent": "<p class=\"govuk-body\">Welsh</p>",
     "whenDoYouWantAttorneysToUse": "Welsh",
     "asSoonAsItsRegistered": "Welsh",
     "onlyWhenIDoNotHaveMentalCapacity": "Welsh",
     "selectWhenCanTheLpaBeUsed": "Welsh",
-    
+
     "restrictionsOnYourAttorneysPower": "Welsh",
     "restrictionsOnYourAttorneysPowerContent": "<p class=\"govuk-body\">Welsh</p>",
     "restrictionExamples": "Welsh",
@@ -135,5 +135,14 @@
 
     "certificateProviderDetails": "Welsh",
     "certificateProviderDetailsHint": "Welsh",
-    "certificateProviderDobHint": "Welsh"
+    "certificateProviderDobHint": "Welsh",
+
+    "aboutPayment": "Welsh",
+    "aboutPaymentContent": "<p class=\"govuk-body\">Welsh</p><p class=\"govuk-body\">Welsh</p>",
+    "feeCoversContent": "<p class=\"govuk-body\">Welsh:</p>",
+    "feeCoversExamples": "<ul class=\"govuk-list govuk-list--bullet\"><li>welsh</li><li>welsh</li><li>welsh</li></ul>",
+    "lowIncomeWarning": "<div class=\"govuk-warning-text govuk-!-margin-bottom-2\"><span class=\"govuk-warning-text__icon\" aria-hidden=\"true\">!</span><strong class=\"govuk-warning-text__text\"><span class=\"govuk-warning-text__assistive\">Important</span>Welsh</strong></div>",
+    "qualifyingForReductionLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"\">Find out more about qualifying for a reduction</a></p>",
+    "continueToPaymentButton": "<a href=\"#\" role=\"button\" draggable=\"false\" class=\"govuk-button govuk-button--start\" data-module=\"govuk-button\">Welsh<svg class=\"govuk-button__start-icon\" xmlns=\"http://www.w3.org/2000/svg\" width=\"17.5\" height=\"19\" viewBox=\"0 0 33 40\" aria-hidden=\"true\" focusable=\"false\"><path fill=\"currentColor\" d=\"M0 0h13l20 20-20 20H0l20-20z\" /></svg></a>"
+
 }
