--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -147,5 +147,11 @@
     "or": "Welsh",
     "Other": "Welsh",
     "selectHowYouKnowCertificateProvider": "Welsh",
-    "enterDescription": "Welsh"
+    "enterDescription": "Welsh",
+
+    "howLongHaveYouKnownCertificateProvider": "Welsh {{.FirstNames}} {{.LastName}}",
+    "twoYearsOrMore": "Welsh",
+    "lessThanTwoYears": "Welsh",
+    "mustHaveKnownCertificateProviderTwoYears": "Welsh",
+    "selectHowLongHaveYouKnownCertificateProvider": "Welsh"
 }
