--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -56,7 +56,6 @@
     "selectAddress": "Welsh",
     "enterAddress": "Welsh",
     "enterTownOrCity": "Welsh",
-    "enterPostcode": "Welsh",
     "couldNotLookupPostcode": "Welsh",
 
     "whoIsThisLpaFor": "Welsh",
@@ -139,11 +138,12 @@
 
     "aboutPayment": "Welsh",
     "aboutPaymentContent": "<p class=\"govuk-body\">Welsh</p><p class=\"govuk-body\">Welsh</p>",
-    "feeCoversContent": "<p class=\"govuk-body\">Welsh:</p>",
+    "feeCoversContent": "Welsh:",
     "feeCoversExamples": "<ul class=\"govuk-list govuk-list--bullet\"><li>welsh</li><li>welsh</li><li>welsh</li></ul>",
-    "lowIncomeWarning": "<div class=\"govuk-warning-text govuk-!-margin-bottom-2\"><span class=\"govuk-warning-text__icon\" aria-hidden=\"true\">!</span><strong class=\"govuk-warning-text__text\"><span class=\"govuk-warning-text__assistive\">Important</span>Welsh</strong></div>",
-    "qualifyingForReductionLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"\">Find out more about qualifying for a reduction</a></p>",
-    "continueToPaymentButton": "<a href=\"#\" role=\"button\" draggable=\"false\" class=\"govuk-button govuk-button--start\" data-module=\"govuk-button\">Welsh<svg class=\"govuk-button__start-icon\" xmlns=\"http://www.w3.org/2000/svg\" width=\"17.5\" height=\"19\" viewBox=\"0 0 33 40\" aria-hidden=\"true\" focusable=\"false\"><path fill=\"currentColor\" d=\"M0 0h13l20 20-20 20H0l20-20z\" /></svg></a>"
+    "importantAssistive": "Welsh",
+    "lowIncome": "Welsh",
+    "qualifyingForReduction": "Welsh",
+    "continueToPayment": "Welsh",
 
     "howDoYouKnowYourCertificateProvider": "{{.FirstNames}} {{.LastName}} Welsh",
     "pleaseDescribe": "Welsh",
