--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -22,7 +22,7 @@
     "selectOneOrMoreOptions": "Select one or more options.",
     "answerLater": "Answer later",
     "willDoThisLater": "I will do this later",
-    
+
     "yourDetails": "Your details",
     "firstNames": "First names",
     "lastName": "Last name",
@@ -55,7 +55,6 @@
     "selectAddress": "Select address",
     "enterAddress": "Enter address",
     "enterTownOrCity": "Enter town or city",
-    "enterPostcode": "Enter postcode",
     "couldNotLookupPostcode": "Could not lookup postcode",
 
     "whoIsThisLpaFor": "Who is this LPA for?",
@@ -135,6 +134,15 @@
     "certificateProviderDetails": "The certificate provider’s details",
     "certificateProviderDetailsHint": "Remember, the certificate provider must be 18 or over. They cannot be a member of your family (this includes step-relations and in-laws) or of the attorneys' families.",
     "certificateProviderDobHint": "We need the certificate provider's date of birth to check they are over 18.",
+
+    "aboutPayment": "About payment",
+    "aboutPaymentContent": "<p class=\"govuk-body\">Thank you for starting your application for an LPA.</p><p class=\"govuk-body\">It costs £82 to apply for an LPA. </p>",
+    "feeCoversContent": "The fee covers the cost of:",
+    "feeCoversExamples": "<ul class=\"govuk-list govuk-list--bullet\"><li>checking your identity and your certificate provider's identity - we do this to protect you and prevent fraud</li><li>checking the LPA as you’re making it - so we can let you know about possible mistakes before you submit the application</li><li>processing your application to register the LPA</li></ul>",
+    "importantAssistive": "Important",
+    "lowIncome": "If you have a low income or get certain means-tested benefits, you can apply to pay a lower fee or no fee",
+    "qualifyingForReduction": "Find out more about qualifying for a reduction",
+    "continueToPayment": "Continue to payment",
 
     "howDoYouKnowYourCertificateProvider": "How do you know {{.FirstNames}} {{.LastName}}, your certificate provider?",
     "pleaseDescribe": "Please describe",
