Add page for check your lpa

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -161,5 +161,34 @@
     "twoYearsOrMore": "Welsh",
     "lessThanTwoYears": "Welsh",
     "mustHaveKnownCertificateProviderTwoYears": "Welsh",
-    "selectHowLongHaveYouKnownCertificateProvider": "Welsh"
+    "selectHowLongHaveYouKnownCertificateProvider": "Welsh",
+    
+    "selectCheckedLpa": "Welsh",
+    "selectHappyToShareLpa": "Welsh",
+    "checkYourLpa": "Welsh",
+    "youveNowFinishedFillingInTheLpa": "Welsh",
+    "lpaDecisions": "Welsh",
+    "typeOfLpa": "Welsh",
+    "WhenTheLpaCanBeUsed": "Welsh",
+    "whenTheLpaCanBeUsed": "Welsh",
+    "whoAreTheAttorneys": "Welsh",
+    "howTheAttorneysMustWorkTogether": "Welsh",
+    "whoIsTheReplacementAttorney": "Welsh",
+    "change": "Welsh",
+    "yourAttorneys": "Welsh",
+    "yourRestrictions": "Welsh",
+    "peopleNamedOnTheLpa": "Welsh",
+    "donor": "Welsh",
+    "name": "Welsh",
+    "idVerified": "Welsh",
+    "address": "Welsh",
+    "certificateProvider": "Welsh",
+    "certificateProviderEmail": "Welsh",
+    "attorneys": "Welsh",
+    "iveCheckedThisLpa": "Welsh",
+    "imHappyToShare": "Welsh",
+    "whatHappensIfIChange": "Welsh",
+    "whatHappensIfIChangeDetails": "<p class=\"govuk-body\">Welsh</p>",
+    "onceYouClickConfirmWarning": "Welsh",
+    "replacementAttorney": "Welsh"
 }
