--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -160,5 +160,34 @@
     "twoYearsOrMore": "2 years or more",
     "lessThanTwoYears": "Less than 2 years",
     "mustHaveKnownCertificateProviderTwoYears": "You must have known your non-professional certificate provider for 2 years or more",
-    "selectHowLongHaveYouKnownCertificateProvider": "Select how long you have known your certificate provider"
+    "selectHowLongHaveYouKnownCertificateProvider": "Select how long you have known your certificate provider",
+
+    "selectCheckedLpa": "Select that you have checked your LPA and don't wish to make changes",
+    "selectHappyToShareLpa": "Select that you are happy to share your LPA with your certificate provider",
+    "checkYourLpa": "Check your LPA",
+    "youveNowFinishedFillingInTheLpa": "You’ve now finished filling in the LPA. Before you continue, carefully check all the answers.",
+    "lpaDecisions": "LPA decisions",
+    "typeOfLpa": "Type of LPA",
+    "WhenTheLpaCanBeUsed": "When the LPA can be used",
+    "whenTheLpaCanBeUsed": "when the LPA can be used",
+    "whoAreTheAttorneys": "Who are the attorneys",
+    "howTheAttorneysMustWorkTogether": "How the attorneys must work together",
+    "whoIsTheReplacementAttorney": "Who is the replacement attorney",
+    "change": "Change",
+    "yourAttorneys": "your attorneys",
+    "yourRestrictions": "your restrictions",
+    "peopleNamedOnTheLpa": "People named on the LPA",
+    "donor": "Donor",
+    "name": "Name",
+    "idVerified": "id verified",
+    "address": "Address",
+    "certificateProvider": "Certificate provider",
+    "certificateProviderEmail": "certificate provider email",
+    "attorneys": "Attorneys",
+    "iveCheckedThisLpa": "I’ve checked this LPA and do not want to make any changes",
+    "imHappyToShare": "I'm happy to share this information with my certificate provider, {{ .FirstNames }} {{ .LastName }}",
+    "whatHappensIfIChange": "What happens if I need to make changes later?",
+    "whatHappensIfIChangeDetails": "<p class=\"govuk-body\">If you want to change your LPA after you’ve had the conversation with your certificate provider, you can.</p> <p class=\"govuk-body\">After you've made the changes, you’ll need to have the conversation with your certificate provider again, so you can talk about the updated LPA.</p>",
+    "onceYouClickConfirmWarning": "Once you click the confirm button, you will not be able to make any more changes.",
+    "replacementAttorney": "Replacement attorney"
 }
