--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -189,5 +189,8 @@
     "whatHappensIfIChange": "What happens if I need to make changes later?",
     "whatHappensIfIChangeDetails": "<p class=\"govuk-body\">If you want to change your LPA after you’ve had the conversation with your certificate provider, you can.</p> <p class=\"govuk-body\">After you've made the changes, you’ll need to have the conversation with your certificate provider again, so you can talk about the updated LPA.</p>",
     "onceYouClickConfirmWarning": "Once you click the confirm button, you will not be able to make any more changes.",
-    "replacementAttorney": "Replacement attorney"
+    "replacementAttorney": "Replacement attorney",
+
+    "whatHappensNext": "What happens next",
+    "whatHappensNextContent": "<p class=\"govuk-body-l\">We've sent an email to {{.CertificateProviderFirstNames}} {{.CertificateProviderLastName}}.</p> <p class=\"govuk-body\">We've asked {{.CertificateProviderFirstName}} to read some information about the certificate provider's role, answer some eligibility questions and confirm their identity.</p> <p class=\"govuk-body\">Once {{.CertificateProviderFirstName}} has done this, we'll send you both an email to let you know it's time to arrange to meet up.</p> <p class=\"govuk-body\">When you meet, {{.CertificateProviderFirstName}} will ask you some important questions about the LPA - this is to make sure you understand the LPA and no one is pressuring you to making it.</p> <p class=\"govuk-body\">In the meantime, you can choose how you'd like to sign the LPA.</p>"
 }
