--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -190,5 +190,21 @@
     "whatHappensIfIChange": "Welsh",
     "whatHappensIfIChangeDetails": "<p class=\"govuk-body\">Welsh</p>",
     "onceYouClickConfirmWarning": "Welsh",
-    "replacementAttorney": "Welsh"
+    "replacementAttorney": "Welsh",
+
+    "whatHappensNext": "Welsh",
+    "whatHappensNextContent": "<p class=\"govuk-body\">Welsh {{.CertificateProviderFirstNames}} {{.CertificateProviderLastName}}</p>",
+
+    "whatHappensWhenSigning": "Welsh",
+    "whatHappensWhenSigningContent": "<p class=\"govuk-body\">Welsh {{.AttorneyFirstNames}} {{.AttorneyLastName}}</p>",
+    "whileYouHaveMentalCapacity": "Welsh",
+    "theyMustAlwaysFollowTheRules": "Welsh",
+    "whatHappensIfIChangeMyMind": "Welsh",
+    "whatHappensIfIChangeMyMindContent": "<p class=\"govuk-body\">Welsh</p>",
+    "registeringYourLpa": "Welsh",
+    "registeringYourLpaContent": "<p class=\"govuk-body\">Welsh {{.AttorneyFirstNames}} {{.AttorneyLastName}} {{.CertificateProviderFirstNames}}</p>",
+
+    "howToSign": "Welsh",
+    "howToSignContent": "<ol class=\"govuk-list govuk-list--number\"><li>Welsh {{.CertificateProviderFirstNames}} {{.CertificateProviderFirstNames}}</li> </ol>",
+    "whenYouSignWarning": "Welsh {{.YouFirstNames}} {{.CertificateProviderFirstNames}}"
 }
