--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -206,5 +206,17 @@
 
     "howToSign": "Welsh",
     "howToSignContent": "<ol class=\"govuk-list govuk-list--number\"><li>Welsh {{.CertificateProviderFirstNames}} {{.CertificateProviderFirstNames}}</li> </ol>",
-    "whenYouSignWarning": "Welsh {{.YouFirstNames}} {{.CertificateProviderFirstNames}}"
+    "whenYouSignWarning": "Welsh {{.YouFirstNames}} {{.CertificateProviderFirstNames}}",
+
+    "readYourLpa": "Welsh",
+    "readAndCheckYourLpa": "Welsh",
+    "whatHappensIfIWantToMakeChanges": "Welsh",
+    "whatHappensIfIWantToMakeChangesContent": "<p class=\"govuk-body\">Welsh</p>",
+    "iHaveReadAndCheckedThisLpa": "Welsh",
+    "iConfirmIMadeThisLpaOfMyOwnFreeWill": "Welsh",
+    "typeSignatureCode": "Welsh",
+    "iHaventReceivedSignatureCode": "Welsh",
+    "selectReadAndCheckedLpa": "Welsh",
+    "selectConfirmMadeThisLpaOfOwnFreeWill": "Welsh",
+    "enterSignatureCode": "Welsh"
 }
