Final PR feedback actioned

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -195,6 +195,5 @@
     "paymentReceivedHeader": "Welsh",
     "yourRefNumber": "Welsh",
     "thankYouHeader": "Welsh.",
-    "paymentConfirmationContent": "<p class=\"govuk-body\">Welsh.</p><p class=\"govuk-body\">Welsh.</p><p class=\"govuk-body\">Welsh.</p>",
-    "continueLink": "Welsh"
+    "paymentConfirmationContent": "<p class=\"govuk-body\">Welsh.</p><p class=\"govuk-body\">Welsh.</p><p class=\"govuk-body\">Welsh.</p>"
 }
