--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -191,6 +191,11 @@
     "onceYouClickConfirmWarning": "Once you click the confirm button, you will not be able to make any more changes.",
     "replacementAttorney": "Replacement attorney",
 
+    "paymentReceivedHeader": "Payment received",
+    "yourRefNumber": "Your reference number",
+    "thankYouHeader": "Thank you for your payment.",
+    "paymentConfirmationContent": "<p class=\"govuk-body\">You have successfully paid for your finance and affairs LPA.</p><p class=\"govuk-body\">We've sent you an email to confirm we've received your LPA application fee.</p><p class=\"govuk-body\">If the email has not arrived in a few minutes, check your spam folder.</p>",
+
     "whatHappensNext": "What happens next",
     "whatHappensNextContent": "<p class=\"govuk-body-l\">We've sent an email to {{.CertificateProviderFirstNames}} {{.CertificateProviderLastName}}.</p> <p class=\"govuk-body\">We've asked {{.CertificateProviderFirstName}} to read some information about the certificate provider's role, answer some eligibility questions and confirm their identity.</p> <p class=\"govuk-body\">Once {{.CertificateProviderFirstName}} has done this, we'll send you both an email to let you know it's time to arrange to meet up.</p> <p class=\"govuk-body\">When you meet, {{.CertificateProviderFirstName}} will ask you some important questions about the LPA - this is to make sure you understand the LPA and no one is pressuring you to making it.</p> <p class=\"govuk-body\">In the meantime, you can choose how you'd like to sign the LPA.</p>",
 
