--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -100,7 +100,7 @@
     "chooseYourCertificateProvider": "Welsh",
     "checkAndSendToYourCertificateProvider": "Welsh",
     "payForTheLpa": "Welsh",
-    "confirmYourIdentity": "Welsh",
+    "confirmYourIdentityAndSign": "Welsh",
     "signAndRegisterTheLpa": "Welsh",
     "signTheLpa": "Welsh",
 
